cinder (2:9.0.0~b1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 09:31:38 +0200

cinder (2:8.0.0-4) unstable; urgency=medium

  [ Thomas Goirand ]
  * Updated Japanese debconf templates (Closes: #820761).
  * Updated Dutch debconf templates (Closes: #822967).
  * Added Brazilian Portuguese debconf templates (Closes: #824287).

  [ Ondřej Nový ]
  * d/copyright: Changed source URL to https protocol

 -- Thomas Goirand <zigo@debian.org>  Thu, 19 May 2016 10:51:12 +0200

cinder (2:8.0.0-3) unstable; urgency=medium

  * Also blacklist test_create_delete_cgsnapshot which is non-deterministically
    failing (Closes: #824595).

 -- Thomas Goirand <zigo@debian.org>  Wed, 18 May 2016 10:20:47 +0200

cinder (2:8.0.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)

  [ Thomas Goirand ]
  * Fixed endpoint creation that was buggy: it was using keystone admin auth
    token which we removed for Mitaka (Closes: #820844).

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Apr 2016 20:21:03 +0000

cinder (2:8.0.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 07 Apr 2016 21:08:51 +0200

cinder (2:8.0.0~rc2-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Updated ja.po debconf translation (Closes: #816343).
  * Ran debconf-updatepo.

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 10:43:20 +0200

cinder (2:8.0.0~rc1-2) experimental; urgency=medium

  * Do not use Keystone admin auth token to register API endpoint.

 -- Thomas Goirand <zigo@debian.org>  Tue, 29 Mar 2016 12:24:55 +0000

cinder (2:8.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Disable non-deterministic failed tests:
    cinder.tests.unit.test_volume.VolumeTestCase.test_create_delete_volume
  * Fixed (build-)depends for this release.