@@ -2,6 +2,7 @@ cinder (2:9.0.0~b1-1) experimental; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Refreshed patches.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 09:31:38 +0200
 
